--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,4 +44,31 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="Gerar KMZ/KML" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/loc_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="Atualize a localização"
+            android:textColor="#FF0000"
+            android:textColorHighlight="#000000"
+            android:textStyle="bold" />
+
+        <ImageButton
+            android:id="@+id/atualizar_loc_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="#2196F3"
+            android:src="@drawable/baseline_refresh_24" />
+
+    </LinearLayout>
+
 </LinearLayout>
